--- a/src/app/waypoint/waypoint/waypoint-edit/waypoint-edit.component.html
+++ b/src/app/waypoint/waypoint/waypoint-edit/waypoint-edit.component.html
@@ -1,1 +1,34 @@
-<p>waypoint-edit works!</p>
+<div class="d-flex justify-content-center mt-5">
+    <div class="col-3" *ngIf="waypointDetail">
+      <form [formGroup]="wayPointEditForm" (ngSubmit)="onSubmit()">
+        <div class="text-center mb-4">
+            <h1 class="h3 mb-3 font-weight-normal">Edit Way Point</h1>          
+        </div>
+        
+        <div class="form-label-group">
+          <label for="inputMissionName">Mission Name</label>
+          <input [(ngModel)]="waypointDetail.missionId" formControlName="missionId" type="text" id="inputMissionName" class="form-control" placeholder="example ">
+        </div>
+        
+        <div class="form-label-group">
+          <label for="inputLatitude">Latitude</label>
+          <input [(ngModel)]="waypointDetail.latitude" formControlName="latitude" type="text" class="form-control" id="inputLatitude" placeholder="Latitude">
+        </div>
+      
+        <div class="form-label-group">
+          <label for="inputLongitude">Longitude</label>
+          <input [(ngModel)]="waypointDetail.longitude" formControlName="longitude" type="text" class="form-control" id="inputLongitude" placeholder="Longitude">
+        </div>
+      
+        <div class="form-label-group">
+          <label for="inputAltitude">Altitude</label>
+          <input [(ngModel)]="waypointDetail.altitude" formControlName="altitude" type="text" class="form-control" id="inputAltitude" placeholder="Altitude">
+        </div>
+      
+        <button [disabled]="wayPointEditForm.invalid" class="btn btn-lg btn-primary btn-block" type="submit">Update Way Point</button>        
+      </form>
+    </div>
+
+
+  </div>
+  
