--- a/src/app/waypoint/waypoint/waypoint-list/waypoint-list.component.html
+++ b/src/app/waypoint/waypoint/waypoint-list/waypoint-list.component.html
@@ -1,8 +1,8 @@
+<nav class="my-2 my-md-0 me-md-3 text-uppercase" style="font-size: large;">      
+  <button routerLink="/waypoint/add/new" type="button" class="btn btn-primary btn-sm">Add New Way Point </button>
+</nav>
+
 <div class="d-flex justify-content-center mt-5">
-  <nav class="my-2 my-md-0 me-md-3 text-uppercase" style="font-size: large;">      
-    <a class="p-2" routerLink="/waypointadd" routerLinkActive="active">Add Way Point</a>
-    <button routerLink="/waypoint/waypointadd" type="button" class="btn btn-primary btn-sm">Add </button>     
-  </nav>
     <div class="col-10">
         <table *ngIf="wayPoints" class="table table-sm">
             <thead>
